Add skill inventory and revise architecture to imperative + virtual threads
CLAUDE.md provides version-specific rules for Java 25, Spring Boot 4.0.3,
HAPI FHIR 8.6.2, and AWS SDK 2.42.4 including critical Jackson 2/3
dual-stack isolation and Apache 5 HTTP client for virtual thread safety.

Architecture revised from reactive WebFlux to imperative WebMVC with
virtual threads based on benchmark analysis showing reactive's 3-6%
throughput edge is negated when ~50% of operations (HAPI FHIR, JCE crypto)
are blocking and must run on boundedElastic. Adds local dev strategy with
HAPI FHIR Docker, profile-based FhirClient switching, and SigV4 signing.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>